--- a/css/kitchenblue.css
+++ b/css/kitchenblue.css
@@ -1,7 +1,3 @@
-/* Cascading stylesheet for the web page "Kitchen Blue"
-   Created by Harrison Kong
-   Copyright (C) Coursera 2020 */
-
    body {
     color: #5a5a5a;
     background-color: #075AAB;
@@ -172,4 +168,5 @@
     }
   
   }
-  
+
+  /* Copyright (C) Coursera 2020 Harrison Kong */
